fix: add z-index to image preview container and improve button tooltip handling in search component

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -596,6 +596,10 @@ body {
 	height: 100px;
 }
 
+.n-image-preview-container {
+	z-index: 9999999999 !important;
+}
+
 @media (max-width: 768px) {
 	#tableCard > .n-card-header {
 		flex-direction: column;
